--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "co-retweet_pre",
+  "name": "co-retweet",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,27 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.1",
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "hooper": "^0.3.4",
+    "install": "^0.13.0",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.6.0",
+    "node-sass": "^5.0.0",
+    "npm": "^7.6.3",
+    "nuxt": "^2.14.12",
+    "nuxt-client-init-module": "^0.3.0",
+    "sass-loader": "10.1.1",
+    "save": "^2.4.0",
+    "stylus": "^0.54.8",
+    "twitter": "^1.7.1",
+    "vue-axios": "^3.2.4",
+    "vue-infinite-loading": "^2.4.5",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "firebase-tools": "^9.5.0"
+    "stylus-loader": "4"
   }
 }
